fixed dark mode

--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
             <p class="green-colored operator" id="divide">÷</p>
         </div>
         <div class="wrapper-child">
-            <p id="seven">7</p>
-            <p id="eight">8</p>
-            <p id="nine">9</p>
+            <p class="numbers" id="seven">7</p>
+            <p class="numbers" id="eight">8</p>
+            <p class="numbers" id="nine">9</p>
             <p class="special2 green-colored operator" id="multiply">*</p>
         </div>
         <div class="wrapper-child">
-            <p id="four">4</p>
-            <p id="five">5</p>
-            <p id="six">6</p>
+            <p class="numbers" id="four">4</p>
+            <p class="numbers" id="five">5</p>
+            <p class="numbers" id="six">6</p>
             <p class="green-colored operator" id="minus">-</p>
         </div>
         <div class="wrapper-child">
-            <p id="one">1</p>
-            <p id="two">2</p>
-            <p id="three">3</p>
+            <p class="numbers" id="one">1</p>
+            <p class="numbers" id="two">2</p>
+            <p class="numbers" id="three">3</p>
             <p class="green-colored operator" id="plus">+</p>
         </div>
         <div class="wrapper-child">
-            <p id="plus-or-minus">+/-</p>
-            <p id="zero">0</p>
-            <p id="dot">.</p>
+            <p class="numbers" id="plus-or-minus">+/-</p>
+            <p class="numbers" id="zero">0</p>
+            <p class="numbers" id="dot">.</p>
             <p class="green-back operator" id="equal">=</p>
         </div>
     </div>
